# code-spec-state-machine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  =1.24.0  CLAUDE.md  Makefile  README.md  agentic_spec.db  agentic_spec_config.yaml  analyze_specs.py  analyze_yaml_schema.py  cli_command_analysis.md  composable-decomposition-design.md  enhanced-spec-generation.md  enhanced-step-expansion.md  example-benefit.md  model_audit_data.json  model_audit_report.md  model_audit_report_auto.md  model_classification.json  pyproject.toml  setup.py  sync_foundation_config.yaml  test_dynamic_injection.py  test_formatting.py  test_render.html
.claude/: settings.local.json
.claude/commands/: spec.md
.cursor/rules/: agentic-spec-rules.mdc
agentic_spec/: __init__.py  async_db.py  cli.py  cli_core.py  cli_db.py  cli_template.py  cli_utils.py  cli_web.py  cli_workflow.py  config.py  core.py  db.py  exceptions.py  graph_visualization.py  models.py  models_backup.py  prompt_editor.py  prompt_engineering.py  prompt_template_loader.py  semantic_cache.py  template_loader.py  template_validator.py  web_ui.py  workflow.py
agentic_spec/ai_providers/: __init__.py  base.py  factory.py  openai_provider.py
agentic_spec/migrations/: 001_add_tracking_fields.py  002_add_enhanced_tracking_fields.py  README.md  __init__.py  migration_manager.py
agentic_spec/templates/: __init__.py  base.py  base_template.html  basic_prompt_templates.yaml  child_template.html  default_specs.py
agentic_spec/utils/: __init__.py  deep_merge.py
agentic_spec/web_templates/: base.html  error.html  index.html  project_list.html  spec_detail.html  specs_list.html  task_detail.html  task_list.html
agentic_spec/web_templates/static/: styles.css
archive/specs-archive-2025-07-27-184732/: 2025-07-26-1d8de70e.yaml  2025-07-26-480cb906.yaml  2025-07-26-4bce15f2.yaml  2025-07-26-930a1e10.yaml  2025-07-26-ad423bc2.yaml  2025-07-26-af652a45.yaml  2025-07-26-d5b80439.yaml  2025-07-27-04577c28.yaml  2025-07-27-0f2cc667.yaml  2025-07-27-17436f2c.yaml  2025-07-27-1cbfdd28.yaml  2025-07-27-21e8eb92.yaml  2025-07-27-21f7c2a9.yaml  2025-07-27-28ab90f9.yaml  2025-07-27-2a695a8f.yaml  2025-07-27-39a4ee8f.yaml  2025-07-27-3a16acfa.yaml  2025-07-27-3d9915ba.yaml  2025-07-27-4a9aef57.yaml  2025-07-27-4b606b7d.yaml  2025-07-27-4c3c2233.yaml  2025-07-27-56759291.yaml  2025-07-27-594f947f.yaml  2025-07-27-5fe71618.yaml  2025-07-27-69ac57e7.yaml  2025-07-27-72ef1b41.yaml  2025-07-27-81798921.yaml  2025-07-27-839fb38e.yaml  2025-07-27-a00e8d61.yaml  2025-07-27-a14041e9.yaml  2025-07-27-cdf60edf.yaml  2025-07-27-d4fe1cd2.yaml  2025-07-27-e59de6d2.yaml  2025-07-27-f48b0377.yaml  migration-plan.yaml  specifications.db
docs/: api_reference.md  architecture.md  async_database.md  deep_merge_guide.md  development.md  overview.md  template_system.md  usage.md
prompt-templates/: basic-specification.md  bug-fix.md  context-enhancement.md  feature-addition.md  refactoring.md  specification-generation.md  specification-review.md  step-expansion.md
scripts/: precommit_agentic_spec_review.py
spec-templates/: agentic-spec-foundation.yaml  cli-application.yaml  machine-learning.yaml  web-api.yaml
specs/: .migration_state.json  .spec_index.json  2025-07-26-07720502.yaml  2025-07-26-1d504bb6.yaml  2025-07-26-1d8de70e.yaml  2025-07-26-2dfb5982.yaml  2025-07-26-2f95c8ae.yaml  2025-07-26-462eb499.yaml  2025-07-26-480cb906.yaml  2025-07-26-4bce15f2.yaml  2025-07-26-4f77ed39.yaml  2025-07-26-59529c8f.yaml  2025-07-26-8925776c.yaml  2025-07-26-930a1e10.yaml  2025-07-26-9e035edb.yaml  2025-07-26-a6c1733c.yaml  2025-07-26-a8694939.yaml  2025-07-26-ad423bc2.yaml  2025-07-26-af652a45.yaml  2025-07-26-b540485c.yaml  2025-07-26-c017c82f.yaml  2025-07-26-c70dc73f.yaml  2025-07-26-ce072f34.yaml  2025-07-26-d0d26085.yaml  2025-07-26-d5b80439.yaml  2025-07-26-d93faf1a.yaml  2025-07-26-dcdeb7d2.yaml  2025-07-26-e20838a2.yaml  2025-07-26-e68aa0fe.yaml  2025-07-26-ea2c8116.yaml  2025-07-26-f661e7d8.yaml  2025-07-26-f96e2544.yaml  2025-07-26-f998adbd.yaml  2025-07-27-0a5931f0.yaml  2025-07-27-0c415583.yaml  2025-07-27-0dec37ab.yaml  2025-07-27-0f2cc667.yaml  2025-07-27-17436f2c.yaml  2025-07-27-1cbfdd28.yaml  2025-07-27-21e8eb92.yaml  (+59 more)
templates/: agentic-spec-foundation.yaml  base-coding-standards.yaml  cli-application.yaml  data-analysis.yaml  git_aware_workflow_template.yaml  machine-learning.yaml  sync_foundation_config.example.yaml  web-api.yaml
tests/: TEST_AUDIT.md  model_validation_test_design.md  test_async_db.py  test_audit_models.py  test_cli.py  test_cli_init.py  test_cli_metadata_visualization.py  test_cli_web.py  test_deep_merge.py  test_enhanced_analysis.py  test_error_handling.py  test_graph_visualization.py  test_merge_workflow_demo.py  test_metadata_extensions.py  test_model_validation.py  test_models_db.py  test_prompt_engineering.py  test_simple_async_db.py  test_sync_foundation_config.py  test_typer_integration.py  test_web_ui_endpoints.py  test_workflow.py
tools/: audit_models.py  complete_tasks.py  fix_dependency_format.py  publish_drafts.py
